--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,4 @@ services:
     environment:
       APPPORT: "3000"
       APPENDPOINT: "${APPENDPOINT}"
-      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
-      PUPPETEER_EXECUTABLE_PATH: "/usr/bin/chromium"
+      BROWSERPATH: "/usr/bin/chromium"
