--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "cheerio": "^1.1.2",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "puppeteer": "^24.17.1"
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
